# model_upper_computer

./: .gitignore  .gitmodules  ai_build.sh  ai_run.sh  both_run.sh  con_build.sh  con_run.sh  config.yaml
ai/: CMakeLists.txt
ai/config/: config.json
ai/configs/: config.json
ai/configs/res/: __model__1  config.json  infer_cfg.yml  label_list.txt
ai/include/: detection.hpp  shared_mem.h  uart.hpp
ai/res/model/yolov3_mobilenet_v1/: deploy_paddle.ro  io_paddle.json  label_list.txt  post.onnx
ai/res/model/yolov3_mobilenet_v1_2/: nms.tar
ai/res/model/yolov3_mobilenet_v1_o/: deploy_paddle.ro  deploy_paddle.tar  io_paddle.json  nms.pdmodel  nms.tar  post.onnx
ai/res/model/yolov3_mobilenet_v1_useless/: deploy_paddle.ro  nms.pdmodel  nms.tar
ai/src/: detection.cpp
ai/src/core/: capture.cpp  capture.hpp  common.hpp  display.cpp  display.hpp  multi_channel_camera.cpp  multi_channel_camera.hpp  preprocess.hpp
ai/src/utils/: blocking_queue.h  multi_channel_camera_util.cpp  multi_channel_camera_util.hpp  shared_mem.h
control/: CMakeLists.txt
control/src/: comm.cpp  comm.h  main.cpp  pid.cpp  pid.h  process.cpp  process.h  reader.cpp  reader.h  shared_mem.h  timer.h
control/src/serial/: serial.h
control/src/yaml-cpp/node/: convert.h
lib/: libyaml-cpp.so.0.7.0
new_ai/include/: common.hpp
